2019-10-05      Gaius Mulley <gaius@southwales.ac.uk>

	* python/pen2map.py:  fixed bug relating to the
          position of assets, monsters, players, python
	  monster and sounds.

2019-09-21      Gaius Mulley <gaius@southwales.ac.uk>

	* NEWS:  updated.
	* Using Python 3 throughout.
	* python/developer-txt2map:  use student search
          path.
	* student/chcuboid.py:  changed to Python 3 and
          added texture field.
	* maps/lighting13.txt:  new file.

2019-02-22      Gaius Mulley <gaius@southwales.ac.uk>

	* python/student/chcuboid.py:  improved comments.

2018-10-01      Gaius Mulley <gaius@southwales.ac.uk>

	* python/developer-txt2map:  improved descriptions.
	* python/pen2map.py:  suppressed many prints
	  (turned on via debugging -d flag).
        * python/txt2pen.py:  added comment for errorLine.

2018-09-21      Gaius Mulley <gaius@southwales.ac.uk>

	* maps/onebot.txt:  New file.
	* maps/twobots.txt:  New file.
	* maps/threebots.txt:  New file.

2018-09-20      Gaius Mulley <gaius@southwales.ac.uk>

	* TODO:  New file.
	* maps/five.txt:  changed definition of ammo.
	* python/developer-txt2map:  added FLOOR and VISPORTALS.
	* python/pen2map.py:  added sound, steps and option for
          visportals (although code is unimplemented).  Many
          changes to implement sounds and floor level code
          rewritten.
	* python/txt2pen.py:  handle sounds and emit them
          to file.
	* random/Makefile.am:  configure source file extension
          to .mod.
	* debian/control:  add gm2 and libpth-dev as dependencies.
	* version.c: set to 1.0.1.
	* Makefile.am:  corrected path to chcuboid.py.

2018-03-10      Gaius Mulley <gaius@gnu.org>

	* python/developer-txt2map:  removed the automatic floor
          level change.
	* maps/complex.txt:  New map.
	* maps/complex2.txt:  New map.
	* maps/tiny.map:  removed autogenerated file.
	* python/txt2pen.py:  (moveBy) reimplemented to fix a bug
	  in scanning a non trivial room.