@@ -1,199 +1,44 @@
 ROOM 1
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/red_tile_floor
    WALL
-     1 20  18 20
-     18 20  18 12
-     18 12  1 12
-     1 12  1 20
-   DOOR 18 16 18 15 STATUS OPEN LEADS TO 2
-   DOOR 5 12 4 12 STATUS OPEN LEADS TO 3
-   LIGHT AT 5 19 ON MID
-   LIGHT AT 9 19 ON MID
-   LIGHT AT 13 19 ON MID
-   LIGHT AT 17 19 ON MID
-   LIGHT AT 17 17 ON FLOOR
-   LIGHT AT 17 16 ON FLOOR
-   LIGHT AT 17 15 ON FLOOR
-   LIGHT AT 16 13 ON MID
-   LIGHT AT 12 13 ON MID
-   LIGHT AT 8 13 ON MID
-   LIGHT AT 6 13 ON FLOOR
-   LIGHT AT 5 13 ON FLOOR
-   LIGHT AT 4 13 ON FLOOR
-   LIGHT AT 2 14 ON MID
-   LIGHT AT 2 18 ON MID
-   SPAWN PLAYER AT 11 18
-   INSIDE AT 4 18
-END
-
-ROOM 2
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/blue_tile_floor
-   WALL
-     18 20  34 20
-     34 20  34 12
-     34 12  18 12
-     18 12  18 20
-   DOOR 32 12 31 12 STATUS OPEN LEADS TO 7
-   DOOR 18 15 18 16 STATUS OPEN LEADS TO 1
-   LIGHT AT 22 19 ON MID
-   LIGHT AT 26 19 ON MID
-   LIGHT AT 30 19 ON MID
-   LIGHT AT 33 18 ON MID
-   LIGHT AT 33 14 ON MID
-   LIGHT AT 33 13 ON FLOOR
-   LIGHT AT 32 13 ON FLOOR
-   LIGHT AT 31 13 ON FLOOR
-   LIGHT AT 27 13 ON MID
-   LIGHT AT 23 13 ON MID
-   LIGHT AT 19 13 ON MID
-   LIGHT AT 19 14 ON FLOOR
-   LIGHT AT 19 15 ON FLOOR
-   LIGHT AT 19 16 ON FLOOR
-   INSIDE AT 21 18
-END
-
-ROOM 3
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/green_tile_floor
-   WALL
-     1 12  8 12
-     8 12  8 7
-     8 7  1 7
-     1 7  1 12
-   DOOR 4 12 5 12 STATUS OPEN LEADS TO 1
-   DOOR 8 10 8 9 STATUS OPEN LEADS TO 4
-   LIGHT AT 3 11 ON FLOOR
-   LIGHT AT 4 11 ON FLOOR
-   LIGHT AT 5 11 ON FLOOR
-   LIGHT AT 7 11 ON FLOOR
-   LIGHT AT 7 10 ON FLOOR
-   LIGHT AT 7 9 ON FLOOR
-   LIGHT AT 6 8 ON MID
-   LIGHT AT 2 8 ON MID
-   INSIDE AT 4 10
-END
-
-ROOM 4
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/purple_tile_floor
-   WALL
-     8 12  15 12
-     15 12  15 7
-     15 7  8 7
-     8 7  8 12
-   DOOR 15 10 15 9 STATUS OPEN LEADS TO 5
-   DOOR 8 9 8 10 STATUS OPEN LEADS TO 3
-   LIGHT AT 12 11 ON MID
-   LIGHT AT 14 11 ON FLOOR
-   LIGHT AT 14 10 ON FLOOR
-   LIGHT AT 14 9 ON FLOOR
-   LIGHT AT 12 8 ON MID
-   LIGHT AT 9 8 ON FLOOR
-   LIGHT AT 9 9 ON FLOOR
-   LIGHT AT 9 10 ON FLOOR
-   INSIDE AT 12 10
-END
-
-ROOM 5
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/black_tile_floor
-   WALL
-     15 12  21 12
-     21 12  21 7
-     21 7  15 7
-     15 7  15 12
-   DOOR 21 10 21 9 STATUS OPEN LEADS TO 6
-   DOOR 15 9 15 10 STATUS OPEN LEADS TO 4
-   LIGHT AT 19 11 ON MID
-   LIGHT AT 20 11 ON FLOOR
-   LIGHT AT 20 10 ON FLOOR
-   LIGHT AT 20 9 ON FLOOR
-   LIGHT AT 17 8 ON MID
-   LIGHT AT 16 8 ON FLOOR
-   LIGHT AT 16 9 ON FLOOR
-   LIGHT AT 16 10 ON FLOOR
-   INSIDE AT 18 10
-END
-
-ROOM 6
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/slate_tile_floor
-   WALL
-     21 12  27 12
-     27 12  27 7
-     27 7  21 7
-     21 7  21 12
-   DOOR 27 10 27 9 STATUS OPEN LEADS TO 7
-   DOOR 21 9 21 10 STATUS OPEN LEADS TO 5
-   MONSTER python_doommarine_mp AT 25 9
-   LIGHT AT 25 11 ON MID
-   LIGHT AT 26 11 ON FLOOR
-   LIGHT AT 26 10 ON FLOOR
-   LIGHT AT 26 9 ON FLOOR
-   LIGHT AT 23 8 ON MID
-   LIGHT AT 22 8 ON FLOOR
-   LIGHT AT 22 9 ON FLOOR
-   LIGHT AT 22 10 ON FLOOR
-   INSIDE AT 25 10
-END
-
-ROOM 7
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT TEXTURE FLOOR textures/quake1/slate_aqua_floor
-   WALL
-     27 12  33 12
-     33 12  33 7
-     33 7  27 7
-     27 7  27 12
-   DOOR 31 12 32 12 STATUS OPEN LEADS TO 2
-   DOOR 30 7 29 7 STATUS OPEN LEADS TO 8
-   DOOR 27 9 27 10 STATUS OPEN LEADS TO 6
-   LIGHT AT 30 11 ON FLOOR
-   LIGHT AT 31 11 ON FLOOR
-   LIGHT AT 32 11 ON FLOOR
-   LIGHT AT 32 9 ON MID
-   LIGHT AT 31 8 ON FLOOR
-   LIGHT AT 30 8 ON FLOOR
-   LIGHT AT 29 8 ON FLOOR
-   LIGHT AT 28 8 ON FLOOR
-   LIGHT AT 28 9 ON FLOOR
-   LIGHT AT 28 10 ON FLOOR
-   INSIDE AT 31 9
-END
-
-ROOM 8
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT COLOUR MID 190 180 170
-   WALL
-     27 7  33 7
-     33 7  33 1
-     33 1  27 1
-     27 1  27 7
-   DOOR 29 7 30 7 STATUS OPEN LEADS TO 7
-   LIGHT AT 28 6 ON FLOOR
-   LIGHT AT 29 6 ON FLOOR
-   LIGHT AT 30 6 ON FLOOR
-   LIGHT AT 32 4 ON MID
-   LIGHT AT 30 2 ON MID
-   LIGHT AT 28 4 ON MID
-   INSIDE AT 31 4
+     1 13  25 13
+     25 13  25 1
+     25 1  1 1
+     1 1  1 13
+   MONSTER python_doommarine_mp AT 13 7
+   AMMO ammo_shells_large AMOUNT 16 AT 4 12
+   AMMO ammo_shells_large AMOUNT 16 AT 4 11
+   AMMO ammo_shells_large AMOUNT 16 AT 3 10
+   AMMO ammo_shells_large AMOUNT 16 AT 5 10
+   AMMO ammo_shells_large AMOUNT 16 AT 4 9
+   AMMO ammo_shells_large AMOUNT 16 AT 4 8
+   AMMO ammo_shells_large AMOUNT 16 AT 13 8
+   AMMO ammo_shells_large AMOUNT 16 AT 4 7
+   AMMO ammo_shells_large AMOUNT 16 AT 12 7
+   AMMO ammo_shells_large AMOUNT 16 AT 14 7
+   AMMO ammo_shells_large AMOUNT 16 AT 4 6
+   AMMO ammo_shells_large AMOUNT 16 AT 13 6
+   AMMO ammo_shells_large AMOUNT 16 AT 4 5
+   AMMO ammo_shells_large AMOUNT 16 AT 4 4
+   AMMO ammo_shells_large AMOUNT 16 AT 4 3
+   AMMO ammo_shells_large AMOUNT 16 AT 4 2
+   LIGHT AT 5 12 ON MID
+   LIGHT AT 9 12 ON MID
+   LIGHT AT 13 12 ON MID
+   LIGHT AT 17 12 ON MID
+   LIGHT AT 21 12 ON MID
+   LIGHT AT 24 11 ON MID
+   LIGHT AT 24 7 ON MID
+   LIGHT AT 24 3 ON MID
+   LIGHT AT 21 2 ON MID
+   LIGHT AT 17 2 ON MID
+   LIGHT AT 13 2 ON MID
+   LIGHT AT 9 2 ON MID
+   LIGHT AT 5 2 ON MID
+   LIGHT AT 2 3 ON MID
+   LIGHT AT 2 7 ON MID
+   LIGHT AT 2 11 ON MID
+   SPAWN PLAYER AT 4 10
+   INSIDE AT 4 11
 END
 
 END.
